--- a/src/styles.scss
+++ b/src/styles.scss
@@ -226,6 +226,7 @@ p {
     &__mobile {
       display: block;
       margin-top: 10px;
+      padding: 0 10px;
     }
 
     &__mobile-button {
@@ -271,7 +272,7 @@ p {
 
   .mobile {
     display: block;
-    padding: 10px 20px;
+    padding: 10px;
   }
 }
 
